--- a/components/Toolbar/Toolbar.module.css
+++ b/components/Toolbar/Toolbar.module.css
@@ -17,6 +17,7 @@
     padding-left: 28px;
     width: 48vw;
     background-color: transparent;
+    flex: 1;
 }
 
 .customInput {
@@ -41,6 +42,6 @@
 
 @media screen and (min-width: 991px) {
     .Toolbar__input {
-        width: 32vw;
+        width: 34vw;
     }
 }
